# shelf_detector

./: Dockerfile  README.md  basic.rviz
cartographer_slam/: CMakeLists.txt
cartographer_slam/config/: cartographer_config.rviz  cartographer_config_real.lua  warehouse_map_sim.yaml
cartographer_slam/launch/: cartographer.launch.py
localization_server/: CMakeLists.txt  package.xml
localization_server/config/: amcl_config_real.yaml  amcl_config_sim.yaml  localization_config.rviz
localization_server/launch/: localization.launch.py
map_server/: CMakeLists.txt  package.xml
map_server/config/: map_server_config.rviz  warehouse_map_real.pgm  warehouse_map_real.yaml  warehouse_map_sim.pgm
map_server/launch/: map_server.launch.py
nav2_apps/: CMakeLists.txt  package.xml
nav2_apps/scripts/: move_shelf_to_ship.py  move_shelf_to_ship_real.py  tf_relay.py  vosk_sub.py
nav2_apps/src/: action_client.cpp  approach_service_real.cpp  approach_service_server.cpp  service_client.cpp  transform_node.cpp
nav2_apps/srv/: GoToLoading.srv
path_planner_server/: CMakeLists.txt  package.xml
path_planner_server/config/: bt.yaml  bt_real.yaml  controller.yaml  controller_real.yaml  filters.yaml  filters_real.yaml  map_keepout.pgm  map_keepout.yaml  planner_server.yaml  planner_server_real.yaml  real_keepout.pgm  real_keepout.yaml  recovery.yaml  recovery_real.yaml
path_planner_server/launch/: pathplanner.launch.py  pathplanner_real.launch.py
shelf_detector/: CMakeLists.txt  package.xml
shelf_detector/launch/: shelf_detector_launch.py  web_services_launch.py  web_services_launch_8.py
shelf_detector/scripts/: tf_relay.py  voice_processor.py
shelf_detector/src/: attach_service.cpp  shelf_client.cpp  test_client.cpp
